Fix overflow in signal page

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,6 @@ html {
 }
 
 .section-size-all-classes {
-overflow: hidden;
   width: 100vw;
   height: 100vh;
 }
